# fuchsia-mirror

./: .gitignore  .gitmodules  .gn  BUILD.gn  OWNERS  fuchsia.code-workspace  pyproject.toml  pyrightconfig.json
boards/: BUILD.bazel  BUILD.gn  arm64.gni  emac.gni  qemu-arm64.gni  qemu-x64.gni  riscv64.gni  vim3-devicetree.gni  vim3-reduced-perf-variation.gni  vim3.gni  x64-reduced-perf-variation.gni  x64.gni
boards/arm64/: BUILD.gn
boards/common/: arm64-common.gni  riscv64-common.gni  x64-common.gni
boards/emac/: BUILD.bazel
boards/emulation/virtio/: BUILD.gn
boards/partitions/: BUILD.gn
boards/partitions/vim3/: BUILD.bazel  BUILD.gn
boards/qemu-arm64/: BUILD.gn
boards/riscv64/: BUILD.gn
boards/vim3/: BUILD.gn
boards/x64/: BUILD.gn
bundles/assembly_input_groups/: BUILD.gn
bundles/tests/: BUILD.gn
bundles/tools/: BUILD.gn
examples/drivers/: BUILD.gn
examples/drivers/bind_library/: BUILD.gn
examples/drivers/demo-number/: demo_number.cc  test.cc
examples/drivers/metadata/: BUILD.gn  forwarder-info.json  forwarder.cc  fuchsia.examples.metadata.fidl  metadata.h  retriever-info.json  retriever.cc  sender-info.json  sender.cc
examples/drivers/skeleton/: BUILD.gn  README.md  component-info.json  skeleton_driver.bind  skeleton_driver.cc  skeleton_driver.h
examples/drivers/template/: BUILD.bazel  BUILD.gn  README.md  component-info.json  template_driver.bind  template_driver.cc  template_driver.h
examples/drivers/transport/: BUILD.gn
products/: bringup.gni  core.gni  core_size_limits.gni  core_with_dfv2_fuzzing.gni  core_with_f2fs.gni  core_with_fxblob.gni  core_with_minfs.gni  core_with_netstack3.gni  microfuchsia_eng.gni  minimal.gni  terminal.gni  workbench_eng.gni
products/common/: core_size_limits.gni
products/core/: BUILD.gn
products/kernel_cmdline/: BUILD.gn
products/microfuchsia/: BUILD.bazel  BUILD.gn
products/minimal/: BUILD.bazel  BUILD.gn
products/terminal/: BUILD.gn  tiles_flatland.core_shard.cml
products/tests/: BUILD.gn
products/workbench/: BUILD.bazel  platform_config.bzl
products/workbench/workbench_session/: BUILD.gn
products/zedboot/: BUILD.bazel  BUILD.gn
sdk/: BUILD.gn  README.md  version_history.json
sdk/banjo/: OWNERS
sdk/banjo/fuchsia.hardware.bt.hci/: bt-hci.fidl
sdk/banjo/fuchsia.hardware.display.controller/: display-controller.fidl
sdk/banjo/fuchsia.hardware.dsiimpl/: dsiimpl.fidl
sdk/banjo/fuchsia.hardware.ethernet/: ethernet.fidl
sdk/banjo/fuchsia.hardware.intelgpucore/: intel-gpu-core.fidl
sdk/banjo/fuchsia.hardware.sdio/: sdio.fidl
sdk/banjo/fuchsia.hardware.sdmmc/: sdmmc.fidl
sdk/banjo/fuchsia.sysmem/: BUILD.gn  README.md  constraints.fidl  image_formats_deprecated.fidl  overview.fidl  usages.fidl
sdk/bundles/: BUILD.gn
sdk/ctf/: BUILD.gn
sdk/ctf/goldens/: package_archives.json
sdk/ctf/release/: BUILD.gn
sdk/ctf/tests/: BUILD.gn
sdk/devices/: BUILD.gn
sdk/docs/: BUILD.gn
sdk/fidl/: BUILD.gn  OWNERS  pick_random_reviewers.sh
sdk/fidl/fuchsia.accessibility.gesture/: BUILD.gn
sdk/fidl/fuchsia.accessibility.semantics/: BUILD.gn  node.fidl  semantics_manager.fidl
sdk/fidl/fuchsia.accessibility.tts/: BUILD.gn
sdk/fidl/fuchsia.accessibility.virtualkeyboard/: BUILD.gn
sdk/fidl/fuchsia.audio/: BUILD.gn
sdk/fidl/fuchsia.audio.controller/: BUILD.gn  device.fidl  overview.fidl  play.fidl  record.fidl  settings.fidl
sdk/fidl/fuchsia.audio.device/: BUILD.gn  control.fidl  device.fidl  overview.fidl  provider.fidl  registry.fidl
sdk/fidl/fuchsia.audio.effects/: BUILD.gn
sdk/fidl/fuchsia.auth/: BUILD.gn  fuchsia.auth.api  overview.fidl
sdk/fidl/fuchsia.auth.oldtokens/: BUILD.gn
sdk/fidl/fuchsia.bluetooth/: BUILD.gn  coding_format.fidl  fuchsia.bluetooth.api
sdk/fidl/fuchsia.bluetooth.a2dp/: BUILD.gn
sdk/fidl/fuchsia.bluetooth.avrcp/: types.fidl
sdk/fidl/fuchsia.bluetooth.bredr/: BUILD.gn  profile.fidl  sco.fidl  service.fidl
sdk/fidl/fuchsia.bluetooth.fastpair/: BUILD.gn
sdk/fidl/fuchsia.bluetooth.gatt/: BUILD.gn
sdk/fidl/fuchsia.bluetooth.gatt2/: BUILD.gn  client.fidl  server.fidl
sdk/fidl/fuchsia.bluetooth.hfp/: BUILD.gn
sdk/fidl/fuchsia.bluetooth.host/: BUILD.gn  host.fidl
sdk/fidl/fuchsia.bluetooth.le/: BUILD.gn  central.fidl  codec_delay.fidl  fuchsia.bluetooth.le.api  iso.fidl  peer.fidl  peripheral.fidl
sdk/fidl/fuchsia.bluetooth.map/: types.fidl
sdk/fidl/fuchsia.bluetooth.pandora/: BUILD.gn  pandora.fidl
sdk/fidl/fuchsia.bluetooth.sys/: BUILD.gn  access.fidl  bootstrap.fidl  configuration.fidl  host_watcher.fidl  identity.fidl  pairing.fidl  peer.fidl
sdk/fidl/fuchsia.bluetooth.test/: BUILD.gn
sdk/fidl/fuchsia.buildinfo/: BUILD.gn
sdk/fidl/fuchsia.buildinfo.test/: BUILD.gn
sdk/fidl/fuchsia.buttons/: BUILD.gn
sdk/fidl/fuchsia.camera/: BUILD.gn  manager.fidl
sdk/fidl/fuchsia.camera2/: BUILD.gn
sdk/fidl/fuchsia.camera2.hal/: BUILD.gn
sdk/fidl/fuchsia.camera3/: BUILD.gn  device.fidl  stream.fidl
sdk/fidl/fuchsia.castauth/: BUILD.gn  cast_auth.fidl  fuchsia.castauth.api
sdk/fidl/fuchsia.castconfig/: BUILD.gn
sdk/fidl/fuchsia.castremotecontrol/: BUILD.gn
sdk/fidl/fuchsia.castsetup/: BUILD.gn
sdk/fidl/fuchsia.castsysteminfo/: BUILD.gn
sdk/fidl/fuchsia.castwindow/: BUILD.gn
sdk/fidl/fuchsia.cobalt/: BUILD.gn  cobalt.fidl
sdk/fidl/fuchsia.component.config/: BUILD.gn  overview.fidl  value.fidl
sdk/fidl/fuchsia.component.decl/: BUILD.gn  capability.fidl  child.fidl  component.fidl  config.fidl  expose.fidl  fuchsia.component.decl.api  offer.fidl  relative_refs.fidl  types.fidl  use.fidl
sdk/fidl/fuchsia.component.internal/: BUILD.gn  component_id_index.fidl  config.fidl
sdk/fidl/fuchsia.component.resolution/: BUILD.gn
sdk/fidl/fuchsia.component.runner/: BUILD.gn  component_runner.fidl  fuchsia.component.runner.api
sdk/fidl/fuchsia.component.sandbox/: BUILD.gn  availability.fidl  fuchsia.component.sandbox.api  overview.fidl  sandbox.fidl
sdk/fidl/fuchsia.component.test/: BUILD.gn  (+2 more)
sdk/firmware/: BUILD.gn  README.md
sdk/lib/: BUILD.gn
sdk/manifests/: firmware.manifest  fuchsia_idk.manifest
(+15277 files in other folders)
