# Copyright 2023 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("@fuchsia_sdk//fuchsia:assembly.bzl", "fuchsia_prebuilt_board_configuration")

package(default_visibility = ["//visibility:public"])

fuchsia_prebuilt_board_configuration(
    name = "x64",
    directory = "@gn_targets//boards/x64",
)

fuchsia_prebuilt_board_configuration(
    name = "qemu-x64",
    directory = "@gn_targets//boards/x64:qemu-x64",
)

fuchsia_prebuilt_board_configuration(
    name = "arm64",
    directory = "@gn_targets//boards/arm64",
)

fuchsia_prebuilt_board_configuration(
    name = "vim3",
    directory = "@gn_targets//boards/vim3",
)

fuchsia_prebuilt_board_configuration(
    name = "riscv64",
    directory = "@gn_targets//boards/riscv64",
)
