# Copyright 2020 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

assert(current_toolchain == default_toolchain,
       "Boards are only defined in the default toolchain")

group("boards") {
  deps = [ ":$target_cpu" ]
}

if (target_cpu == "x64") {
  group("x64") {
    deps = [ "//boards/x64" ]
  }
} else if (target_cpu == "arm64") {
  group("arm64") {
    deps = [
      "//boards/arm64",
      "//boards/qemu-arm64",
      "//boards/vim3",
    ]
  }
} else if (target_cpu == "riscv64") {
  group("riscv64") {
    deps = [ "//boards/riscv64" ]
  }
}
